# tap-polarsh

./: .copier-answers.yml  .gitattributes  .pre-commit-config.yaml  README.md  justfile  meltano.yml  plugin.yaml  pyproject.toml  renovate.json  tox.ini
.github/: renovate.json5
.github/prompts/: update_catalog_prompt.txt
.github/workflows/: build.yaml  build.yml  test.yaml  test.yml  update_catalog.yml  update_openapi.yml
scripts/: update_openapi.py
tap_polarsh/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_polarsh/openapi/: __init__.py  openapi.json
tests/: __init__.py  conftest.py  test_core.py  test_schema_evolution.py
tests/__snapshots__/test_schema_evolution/: test_catalog_changes[benefit_grants].json  test_catalog_changes[benefit_grants_custom].json  test_catalog_changes[benefit_grants_discord].json  test_catalog_changes[benefit_grants_downloadables].json  test_catalog_changes[benefit_grants_github_repo].json  test_catalog_changes[benefit_grants_license_keys].json  test_catalog_changes[benefit_grants_meter_credit].json  test_catalog_changes[benefits_custom].json  test_catalog_changes[benefits_discord].json  test_catalog_changes[benefits_downloadables].json  test_catalog_changes[benefits_github_repo].json  test_catalog_changes[benefits_license_keys].json  test_catalog_changes[benefits_meter_credit].json  test_catalog_changes[checkout_links].json  test_catalog_changes[orders].json  test_catalog_changes[organizations].json  test_catalog_changes[products].json  test_catalog_changes[subscriptions].json
