[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.28",
]

[project]
name = "tap-polarsh"
description = "Singer tap for Polar, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Polar",
  "singer.io",
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "requests~=2.31",
  "singer-sdk~=0.53.2",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.license]
file = "LICENSE"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
"tap-polarsh" = "tap_polarsh.tap:TapPolar.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-polarsh#readme"
Homepage = "https://github.com/reservoir-data/tap-polarsh"
Repository = "https://github.com/reservoir-data/tap-polarsh"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=9",
  "singer-sdk[testing]",
  "syrupy>=5",
]
typing = [
  "mypy~=1.19.0",
  "ty>=0.0.1a23",
  "types-requests~=2.31",
]

[tool.hatch]
[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.10"
prerelease = "allow"
preview = true

[tool.ruff]
line-length = 88
preview = true
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
isort.known-first-party = [
  "tap_polarsh",
]
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.deptry]
[tool.deptry.package_module_name_map]
mypy = "mypy"
pytest = "pytest"
tap-polarsh = "tap_polarsh"
ty = "ty"
types-requests = "requests"
[tool.deptry.per_rule_ignores]
DEP002 = [
  "requests",
]

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
addopts = [
  "-vvv",
  "--durations=10",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
log_level = "INFO"
minversion = "9"
filterwarnings = [
  "error",
  "ignore:No records were available to test:UserWarning",
]
testpaths = [
  "tests",
]
xfail_strict = true

[tool.tox]
min_version = "4.22"
env_list = [
  "dependencies",
  "typing",
  { product = [
    { prefix = "3.", start = 12 },
  ] },
]
[tool.tox.env]
dependencies.dependency_groups = [ "testing" ]
dependencies.commands = [ [ "deptry", "." ] ]
typing.dependency_groups = [ "testing", "typing" ]
typing.commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_polarsh", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_polarsh", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_POLARSH_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
